force-app/main/default/objects/PS_Time_Card__c/PS_Time_Card__c.object-meta.xml
<CustomObject>
    <description>SOX object - This is the weekly hours submitted by the PS User on thier PS Task.This is submitted for approval at the end of the week. Can capture Billable and non billable task.</description>
    <label>PS Time Card</label>
    <nameField>
        <label>PS Time Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Time Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>