force-app/main/default/objects/PS_Time_Card__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PS Time Cards</relationshipLabel>
    <relationshipName>PS_Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>