force-app/main/default/objects/PS_Time_Card__c/fields/PS_Project__c.field-meta.xml
<CustomField>
    <fullName>PS_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Project</label>
    <referenceTo>PS_Project__c</referenceTo>
    <relationshipLabel>PS Time Cards</relationshipLabel>
    <relationshipName>PS_Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>