force-app/main/default/objects/PS_Time_Card__c/fields/Total_Admin_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Admin_Hours__c</fullName>
    <label>Total Admin Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>