force-app/main/default/objects/PS_Time_Card__c/fields/Total_Billable_Hours_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours_New__c</fullName>
    <label>Total Billable Hours New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>