force-app/main/default/objects/PS_Time_Card__c/fields/Total_Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Hours__c</fullName>
    <formula>Total_Non_Billable_Consult_Hours__c + Total_Non_Billable_Install_Hours__c + Total_Non_Billable_Hours_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Non Billable Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>