force-app/main/default/objects/PS_Time_Card__c/fields/Total_Non_Billable_Install_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Install_Hours__c</fullName>
    <label>Total Non Billable Install Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>