force-app/main/default/objects/PS_Time_Card__c/validationRules/selfApprovalCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>selfApprovalCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Status__c ) ,
AND(
    ( $User.Id = OwnerId ),
      ISPICKVAL( Status__c , &quot;Approved&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Operation not permitted. Please contact your manager for assistance.</errorMessage>
</ValidationRule>