force-app/main/default/objects/PS_Time_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>PS_Project__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>