force-app/main/default/objects/PS_Time_Card__c/listViews/Approval_In_Progress.listView-meta.xml
<ListView>
    <fullName>Approval_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approver__c</columns>
    <columns>Assignee__c</columns>
    <columns>PS_Project__c</columns>
    <columns>Status__c</columns>
    <columns>Time_Card_End_Date__c</columns>
    <columns>Time_Card_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approval In Progress</value>
    </filters>
    <label>Approval In Progress</label>
</ListView>