force-app/main/default/objects/PS_Time_Card__c/listViews/Pending_This_Week.listView-meta.xml
<ListView>
    <fullName>Pending_This_Week</fullName>
    <columns>NAME</columns>
    <columns>PS_Project__c</columns>
    <columns>Status__c</columns>
    <columns>Time_Card_End_Date__c</columns>
    <columns>Time_Card_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Time_Card_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Pending This Week</label>
</ListView>