force-app/main/default/objects/PS_Time_Card__c/listViews/PS_Approver_PS_Time_Card.listView-meta.xml
<ListView>
    <fullName>PS_Approver_PS_Time_Card</fullName>
    <filterScope>Queue</filterScope>
    <label>PS Approver</label>
    <queue>PS_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>